--- a/docs/development/backend/index.mdx
+++ b/docs/development/backend/index.mdx
@@ -5,7 +5,7 @@ sidebar: Getting Started
 ---
 
 import { Card, Cards } from 'fumadocs-ui/components/card';
-import { Database, Shield, Plug, Settings, Mail, TestTube, Wrench, BookOpen } from 'lucide-react';
+import { Database, Shield, Plug, Settings, Mail, TestTube, Wrench, BookOpen, Terminal } from 'lucide-react';
 
 # DeployStack Backend Development
 
@@ -95,6 +95,14 @@ The development server starts at `http://localhost:3000` with API documentation 
     title="Roles Management"
   >
     User roles, permissions system, and access control implementation details.
+  </Card>
+  
+  <Card 
+    icon={<Terminal />} 
+    href="/deploystack/development/backend/gateway-client-config" 
+    title="Gateway Client Configuration"
+  >
+    API endpoint for generating client-specific gateway configuration files with dual authentication support.
   </Card>
 </Cards>
 
