--- a/docs/mcp-catalog.mdx
+++ b/docs/mcp-catalog.mdx
@@ -134,7 +134,9 @@ Each server in the catalog includes comprehensive metadata:
 - **Tools**: Available MCP tools and their functions
 - **Resources**: Data sources and resource types
 - **Prompts**: Pre-configured prompts and templates
-- **Configuration**: Default settings and environment variables
+- **Configuration Schema**: Template definitions for team and user configuration options
+
+For details on how configuration schemas work in DeployStack's three-tier system, see [MCP Configuration System](/mcp-configuration).
 
 #### Repository Integration
 - **GitHub URL**: Source code repository
@@ -343,10 +345,12 @@ The catalog integrates seamlessly with DeployStack's deployment system:
 - **Update Notifications**: Alert users to security updates
 
 ### Data Protection
-- **Configuration Security**: Secure handling of server configurations
-- **Environment Variables**: Encrypted storage of sensitive settings
+- **Configuration Security**: Secure handling of server configurations and schemas
+- **Sensitive Data**: Encrypted storage through the three-tier configuration system
 - **Repository Access**: Secure GitHub integration
 - **Privacy Controls**: Respect team privacy and data boundaries
+
+For detailed security information about configuration handling, see [MCP Configuration System](/mcp-configuration).
 
 ## Future Enhancements
 
