--- a/docs/mcp-team-installation.mdx
+++ b/docs/mcp-team-installation.mdx
@@ -108,14 +108,39 @@ User Controls (You Decide Lock/Unlock):
 - Users build on top of team configuration
 - Clean separation between shared and personal settings
 
+## Device Visibility and Management
+
+As a team administrator, you have visibility into how team members use MCP servers across their devices:
+
+**📊 Team Device Overview**
+- See all devices used by team members
+- Monitor MCP server usage patterns by device
+- Identify device-specific configuration trends
+- Track team productivity across different device types
+
+**🔍 Device-Specific Insights**
+- Which MCP servers are used on which devices
+- How team members configure servers differently across devices
+- Device compliance with team policies
+- Usage analytics for optimization
+
+**🛡️ Security Management**
+- Monitor device access to team MCP installations
+- Identify unusual device activity patterns
+- Ensure device compliance with organizational policies
+- Support team members with device-related issues
+
+For comprehensive device management capabilities, see [Device Management](/device-management).
+
 ## What Team Members Experience
 
 Based on your lock/unlock decisions and the schema boundaries set by global administrators, team members:
 
 - Only see configuration elements they can modify
 - Use team credentials automatically without seeing sensitive values
-- Can customize unlocked elements for their workflow
-- Get consistent behavior across all team members
+- Can customize unlocked elements for their workflow across multiple devices
+- Get consistent behavior across all team members and devices
+- Benefit from automatic device registration and management
 
 For details on the user experience, see [MCP User Configuration](/mcp-user-configuration).
 
