--- a/docs/mcp-user-configuration.mdx
+++ b/docs/mcp-user-configuration.mdx
@@ -78,7 +78,7 @@ TEAM-MANAGED SETTINGS (You inherit these automatically)
 
 ## Multi-Device Support
 
-DeployStack supports different configurations for each device you use:
+DeployStack supports different configurations for each device you use through automatic device registration and management:
 
 **Device Examples:**
 - **"MacBook Pro"** - Your personal laptop with development setup
@@ -86,12 +86,20 @@ DeployStack supports different configurations for each device you use:
 - **"Cloud Workstation"** - Remote development environment
 
 **Adding a New Device:**
-1. **Device Detection** - System identifies this as a new device
-2. **Device Naming** - You provide a meaningful name
-3. **Configuration Setup** - Configure personal settings for this device
-4. **Team Inheritance** - Automatically inherit all team settings
+1. **Automatic Detection** - System identifies this as a new device during login
+2. **Secure Registration** - Device is registered through OAuth2 authentication
+3. **Device Naming** - System uses hostname by default, you can customize
+4. **Configuration Setup** - Configure personal settings for this device
+5. **Team Inheritance** - Automatically inherit all team settings
 
-Each device maintains its own personal configuration while sharing team settings.
+Each device maintains its own personal configuration while sharing team settings. Device registration happens automatically and securely - no manual setup required.
+
+**Device Security:**
+- Hardware fingerprinting ensures unique device identification
+- Device registration only happens during authenticated login
+- Administrators can manage device access for security
+
+For comprehensive device management details, see [Device Management](/device-management).
 
 ## Personal Configuration Types
 
